Update sharing message

--- a/GoogleDriveManagement/GoogleDriveManagement/App.config
+++ b/GoogleDriveManagement/GoogleDriveManagement/App.config
@@ -4,8 +4,8 @@
     <add key="FileName" value="D:\Groups.xlsx"/>
     <add key="RootFolderName" value="Test"/>
     <add key="AuthFilePath" value="credentials.json"/>
-    <!--<add key="SharingMessage" value="This folder is shared with each team separately. 
+    <add key="SharingMessage" value="This folder is shared with each team separately. 
                                         Please DON'T share it with anyone outside the team. 
-                                        Make sure to copy the folder of the project with the same hierarchy into this folder (don't zip) before deadline."/>-->
+                                        Make sure to copy the folder of the project with the same hierarchy into this folder (don't zip) before the deadline."/>
   </appSettings>
 </configuration>
